# reviewbot

./: .env.example  .gitignore  LICENSE  PRD.md  README.md  pyproject.toml  reviewbot.yml
.github/workflows/: reviewbot.yml  tests.yml
docs/superpowers/plans/: 2026-06-28-review-quality-redesign.md
examples/: reviewbot.yml
examples/workflows/: reviewbot.yml
reviewbot/: __init__.py  cli.py  codegraph.py  config.py  fetcher.py  models.py  parser.py  poster.py  reviewer.py  runner.py  source_context.py
tests/: test_codegraph.py  test_config.py  test_fetcher.py  test_parser.py  test_poster.py  test_reviewer.py  test_runner.py  test_source_context.py
tests/fixtures/: sample.diff
