[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reviewbot-cli"
version = "0.1.0"
description = "Automated PR code review via GitHub Actions — free LLM, inline comments, zero setup beyond one secret."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Hamza El Sousi" }]
requires-python = ">=3.11"
keywords = ["code-review", "github-actions", "llm", "pull-request", "openrouter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "PyGithub>=2.3",
    "unidiff>=0.7.5",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.urls]
Homepage = "https://github.com/swapnilsable-pro/reviewbot"
Issues = "https://github.com/swapnilsable-pro/reviewbot/issues"

[project.scripts]
reviewbot = "reviewbot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["reviewbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
